--- a/index.html
+++ b/index.html
@@ -1179,10 +1179,10 @@ if (treatmentId === 'treatment1') {
             document.getElementById('firstsecondanniversary').classList.remove('active');
             document.getElementById('repeatsecondanniversary').classList.remove('active');
             element.classList.add('active');
-            secondanniversaryCount = element.innerText;
+            secondsecondanniversaryCount = element.innerText;
 
             // 選択された訪問回数に対応する時間を取得
-            selectedsecondanniversaryTime = secondTimes[secondCount];
+            selectedsecondanniversaryTime = secondTimes[secondsecondanniversaryCount];
 
             console.log('選択された訪問回数の時間:', selectedsecondanniversaryTime);
 
