--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 <body>
     <div class="container">
-        <h1>Life-Style リラクゼーション<br>予約フォーム</h1>
+        <h1>Style Lily<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -299,20 +299,20 @@
             <span class="highlight-text">オプション</span>
         </div>
         <div class="irradiations">
-            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">新婦ヘアセット6,600円</button>
-            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">新郎ヘアセット5,500円</button>
-            <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フルメイク5,500円</button>
-            <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（ウェディングドレス）11,000円</button>
-            <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（メンズ衣装）5,500円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（マタニティドレス）5,500円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">花の装飾追加レンタル5,500円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">人数追加（5名以上希望の方一人につき）1,100円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（10分）1,100円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（20分）2,200円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（30分）3,300円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（40分）4,400円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（50分）5,500円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（60分）6,600円</button>
+            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">新婦ヘアセット6600円</button>
+            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">新郎ヘアセット5500円</button>
+            <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フルメイク5500円</button>
+            <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（ウェディングドレス）11000円</button>
+            <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（メンズ衣装）5500円</button>
+            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（マタニティドレス）5500円</button>
+            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">花の装飾追加レンタル5500円</button>
+            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">人数追加（5名以上希望の方一人につき）1100円</button>
+            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（10分）1100円</button>
+            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（20分）2200円</button>
+            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（30分）3300円</button>
+            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（40分）4400円</button>
+            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（50分）5500円</button>
+            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（60分）6600円</button>
         </div>
 
         <div class="label">希望日時</div>
