--- a/index.html
+++ b/index.html
@@ -307,10 +307,9 @@
 
         <div class="label">生年月日</div>
 
-        <!-- カスタム placeholder 表示用 -->
 <div class="datetime-wrapper" style="text-align: center;">
     <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
-    <input type="datetime-local" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+    <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
     <span class="datetime-placeholder">タップして日時を入力</span>
 </div>
 
@@ -440,17 +439,26 @@
         let menuPrice = 0; // メニューの価格
         let optionsPrice = 0; // オプションの合計価格
 
-        document.addEventListener('DOMContentLoaded', function () {
-            liff.init({
-                liffId: '2005254357-zKma9BZk'
-            }).then(() => {
-                console.log('LIFF初期化成功');
-            }).catch((err) => {
-                console.log('LIFF初期化失敗', err);
-            });
+document.addEventListener('DOMContentLoaded', function () {
+    // 初期化コード
+    liff.init({
+        liffId: '2006616429-V0q85Yed'
+    }).then(() => {
+        console.log('LIFF初期化成功');
+    }).catch((err) => {
+        console.log('LIFF初期化失敗', err);
+    });
 
-            fetchAvailability(currentDate);
-        });
+    // 生年月日の入力を監視し、formData.dates[1] に格納
+    const birthdateInput = document.getElementById('date1');
+    birthdateInput.addEventListener('change', function () {
+        const formData = { dates: [] }; // 必要に応じて formData を初期化
+        formData.dates[1] = this.value;
+        console.log('生年月日が更新されました:', formData.dates[1]);
+    });
+
+    fetchAvailability(currentDate);
+});
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
