--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 document.addEventListener('DOMContentLoaded', function () {
     // 初期化コード
     liff.init({
-        liffId: '2006616429-V0q85Yed'
+        liffId: '2005254357-zKma9BZk'
     }).then(() => {
         console.log('LIFF初期化成功');
     }).catch((err) => {
