--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
         visitCount: visitCount,
         selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
         irradiationsCount: irradiationsCount,
-        dates: [selectedFullDate, formData.dates[1]], // dates[1] を含める
+        dates: [selectedFullDate],
         message: document.getElementById('message').value.trim()
     };
 
